--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.6.6",
     "axios": "^0.18.0",
     "history": "^4.7.2",
+    "immutable": "^3.8.2",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -16,6 +17,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   },
